hello_app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-first
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes-first
  template:
    metadata:
      labels:
        app: hello-kubernetes-first
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-first
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-first


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: hello-kubernetes
    # kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: kubernetes.io/cluster/eks-v2=owned
    alb.ingress.kubernetes.io/security-groups: eks-v2-cluster
spec:
  ingressClassName: alb
  # tls:
  # - hosts:
  #   - hello-eksnyc.xstaging.tv
  #   secretName: "wildcard.nyc.xstaging.tv"
  rules:
  # - host: "hello-eks.xstaging.tv"
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-first
            port:
              number: 80


##############

---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-first-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: hello-kubernetes-nlb
    service.beta.kubernetes.io/aws-load-balancer-type: external
    # service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: kubernetes.io/cluster/eks-v2=owned
    # alb.ingress.kubernetes.io/security-groups: eks-v2-cluster
    service.beta.kubernetes.io/aws-load-balancer-manage-backend-security-group-rules: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-first
